# rust-typescript-game-template

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  typeshare.sh
ae-direction/: .gitignore  Cargo.toml  README.md
ae-direction/src/: direction.rs  lib.rs
ae-position/: Cargo.toml  README.md
ae-position/src/: delta.rs  lib.rs  position.rs
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx  main.css
client/src/components/: index.tsx
client/src/components/ControlOverlay/: ControlOverlay.css  ControlOverlay.tsx
client/src/components/HoverMenu/: HoverMenu.css  HoverMenu.tsx
client/src/components/Log/: Log.css  Log.tsx
client/src/game/: canvas.ts  connection.ts  initialize.ts  input.ts
client/src/utility/: config.ts  functions.ts  types.ts
migrations/: 20221222034009_1.sql
src/: api.rs  main.rs
src/database/: mod.rs
src/game/: map.rs  player.rs  world.rs
src/websocket/: connections.rs  disconnect.rs  message.rs  mod.rs  new_connection.rs
