[package]
edition = "2021"
name = "gamejam-2023"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ae-direction = {path = "./ae-direction"}
ae-position = {path = "./ae-position"}
futures-util = "0.3.25"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = {version = "1.0.151", default-features = false, features = ["derive"]}
serde_json = {version = "1.0.90", default-features = false}
sqlx = {version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "offline"]}
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1.11"
typeshare = "1.0.0"
warp = "0.3.3"

[workspace]
members = [
  "ae-position",
  "ae-direction",
]
