[package]
authors = ["Alex Eagleson <alexeagleson@gmail.com>"]
description = "A Rust library for handling directions (cardinal and ordinal).  Intended for use in game development."
edition = "2021"
homepage = "https://github.com/alexeagleson/ae-direction"
license = "MIT OR Apache-2.0"
name = "ae-direction"
readme = "README.md"
repository = "https://github.com/alexeagleson/ae-direction"
rust-version = "1.65"
version = "0.1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"